--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateUserActivity"></activity>
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".Controler.CreateUserActivity"></activity>
+        <activity android:name=".Controler.LoginActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Controler.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
